# mediagetter

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
assets/: danbooru.html  pixiv_multi.html  pixiv_multi.json  pixiv_single.html  pixiv_single.json  twitter_video.html  urls.csv
src/: lib.rs  main.rs
src/scraper/: danbooru.rs  generic.rs  mod.rs  pixiv.rs  twitter.rs
