[package]
name = "mediagetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
image = "0.24.4"
img_hash = "3.2.0"
once_cell = "1.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
