[package]
name = "mediagetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
axum-macros = "0.2.3"
byte-unit = "4.0.14"
hex = "0.4.3"
hyper = "0.14.20"
image = "0.24.4"
image_hasher = "1.0.0"
once_cell = "1.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
scraper = "0.13.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
